# ipc-rust

./: Cargo.toml  README.md
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/receiver/: Cargo.toml
crates/receiver/src/: main.rs
crates/sender/: Cargo.toml
crates/sender/src/: main.rs
