[workspace]
resolver = "2"
members = ["crates/protocol", "crates/receiver", "crates/sender"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# --- workspace members ---
protocol = { path = "crates/protocol" }
receiver = { path = "crates/receiver" }
sender = { path = "crates/sender" }
# --- external crates ---
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.52", features = ["macros", "rt", "net", "rt-multi-thread", "io-util"]}
tokio-utils = "0.1"
futures = { version = "0.3", default-features = false, features = ["std"]}
